crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_abort_convention_on_a_synchronous_extern_without_color.snap
---
source: crates/alder-driver/src/compile.rs
description: "#[extern(\"globalThis\", \"JSON.parse\", \"abort\")]\nfn parse(value: String) String\n"
---
alder::canonicalize::invalid_extern

  × invalid extern attribute: the `abort` convention requires a Task return
  │ type
   ╭─[/project/src/main.ald:1:1]
 1 │ ╭─▶ #[extern("globalThis", "JSON.parse", "abort")]
 2 │ ├─▶ fn parse(value: String) String
   · ╰──── reported here
   ╰────
