crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_ambiguous_local_trait_variable_with_source.snap
---
source: crates/alder-driver/src/compile.rs
description: "fn ambiguous() {\n    let equal = (left, right) -> { left == right }\n    ()\n}\n"
---
alder::trait::ambiguous_type_variable

  × cannot determine the types required by `Eq[a]`
   ╭─[/project/src/main.ald:2:41]
 1 │ fn ambiguous() {
 2 │     let equal = (left, right) -> { left == right }
   ·                                         ─┬
   ·                                          ╰── this trait use has no determining type
 3 │     ()
   ╰────
  help: add a type annotation that fixes the operand type
