crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_associated_type_cycle_with_source.snap
---
source: crates/alder-driver/src/compile.rs
description: "enum Counter { Counter }\ntrait Pair[i] {\n    type Left\n    type Right\n}\nimpl Pair[Counter] {\n    type Left = Right\n    type Right = Left\n}\n"
---
alder::trait::projection_cycle

  × associated type cycle: Left -> Right -> Left
   ╭─[/project/src/main.ald:6:1]
 5 │     }
 6 │ ╭─▶ impl Pair[Counter] {
 7 │ │       type Left = Right
 8 │ │       type Right = Left
 9 │ ├─▶ }
   · ╰──── these associated type definitions form a cycle
   ╰────
  help: make at least one associated type resolve to a non-cyclic type
