crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_async_scope_error_for_task_annotated_function.snap
---
source: crates/alder-driver/src/compile.rs
description: "import task\nfn wait() Task[()] {\n    task.sleep(1).await\n}\n"
---
alder::canonicalize::await_outside_async

  × `.await` needs an enclosing async body
   ╭─[/project/src/main.ald:3:5]
 2 │ fn wait() Task[()] {
 3 │     task.sleep(1).await
   ·     ─────────┬─────────
   ·              ╰── reported here
 4 │ }
   ╰────
  help: use `async fn` or an `async { ... }` block
